# uim-protocol

./: .flake8  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  INSTRUCTIONS.md  LICENSE  README.md  index.html  pyproject.toml  repo2llm.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  documentation_request.md  feature_request.md
.github/workflows/: ci.yml  docs.yml
assets/audio/: transcript.txt
assets/javascripts/: extra.js
assets/stylesheets/: extra.css
community/: index.html
community/code-of-conduct/: index.html
community/contributing/: index.html
community/contributors/: index.html
community/faq/: index.html
community/governance/: index.html
community/roadmap/: index.html
docs/: README.md  doc_tracker.md
docs/api/: README.md
docs/embeddings/: 1A1.embedding  2Aa2.embedding  metadata.json
docs/specification/: llm_context.md  uim-prototypes-intro.md  uim-specification.md
examples/intent_examples/: README.md  ecommerce_intents.json  realestate_intents.json
guides/: index.html
guides/ai-agent-guide/: index.html
guides/getting-started/: index.html
guides/integration-examples/: index.html
guides/service-provider-guide/: index.html
guides/testing/: index.html
guides/visual-differentiation-example/: index.html
implementations/: README.md
implementations/centralized-discovery-service/: .env.example  Dockerfile  README.md  docker-compose.yml  pytest.ini  requirements.txt
implementations/uim-mock-agent/: README.md  requirements.txt
implementations/uim-mock-webservice/: .pylintrc  README.md  main.py  requirements.txt
prototypes/: index.html
prototypes/discovery-service/: index.html
prototypes/mock-agent/: index.html
prototypes/mock-webservice/: index.html
prototypes/overview/: index.html
reference/: index.html
reference/api-reference/: index.html
reference/error-codes/: index.html
reference/json-schemas/: index.html
reference/licensing-scheme/: index.html
resources/: index.html
resources/podcast/: index.html
search/: search_index.json
specification/: index.html  uim-specification.txt
src/: SPEC.md  abstract.md  repo2llm.py
uim-docs/: README.md  build-docs.sh  mkdocs.yml
(+153 files in other folders)
